# pelican-metadata-generator

./: FileHandler.py  LICENSE  PMGController.py  PMGModel.py  PMGView.py  README.md  TODO  model.py  pelican-metadata-generator.desktop  pelican-metadata-generator.py  pyproject.toml  view.py
.github/workflows/: tests.yml
src/pelican_metadata_generator/: cli.py  controller.py  file_handler.py  model.py  view.py
tests/: files_reading_writing.py  models.py  test_files_reading_writing.py  test_models.py
tests/posts/: author_field.md  author_field.rst  authors_field.md  authors_field.rst  file_with_YAML_headers.md  file_with_colon_in_first_line.md  file_with_colon_in_first_line.rst  file_with_headers.md  file_with_headers.rst  file_with_headers_after_text.md  file_with_headers_after_text.rst  file_with_headers_right_after_title.rst  file_with_list_metadata.rst  file_with_multiline_metadata.md  file_with_multiline_metadata.rst  file_with_title_only.rst  file_without_headers.md  file_without_separator.md  long_file_with_blank_lines_at_top.rst  tags_separated_by_comma.md  tags_separated_by_comma.rst  tags_separated_by_semicolon.md  tags_separated_by_semicolon.rst  url_in_first_line.md
