[tool.poetry]
name = "pelican-metadata-generator"
version = "0.1.0"
description = ""
authors = ["Mirek Długosz <mirek@mirekdlugosz.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mirekdlugosz/pelican-metadata-generator"

[tool.poetry.dependencies]
python = "^3.6"
python-slugify = "^4.0.1"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pelican-metadata-generator = "pelican_metadata_generator.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
