[tool.poetry]
name = "pelican-metadata-generator"
version = "0.2.0"
description = ""
authors = ["Mirek Długosz <mirek@mirekdlugosz.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mirekdlugosz/pelican-metadata-generator"

[tool.poetry.dependencies]
python = "^3.9"
python-slugify = "^8.0.4"
PyQt5 = "^5.15.0"
PyQt5-Qt5 = "5.15.2"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"
flake8 = "^7.0.0"
black = "^24.2.0"

[tool.poetry.scripts]
pelican-metadata-generator = "pelican_metadata_generator.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
